--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ before_install:
   - cpanm --notest Test::Version
   - cpanm --notest Test::Pod::Coverage
   - cpanm --notest Test::Pod
-
+  - cpanm --notest Test::Code::TidyAll
+  - cpanm --notest Test::Perl::Critic
